VQ-1321: Beneficiaries and Dependents Screen

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1363,24 +1363,35 @@
         "account_number": "账号",
         "add_coinsurance_option": "添加共保选项",
         "agent": "代理人",
+        "back": "返回",
         "bank": "银行",
         "bank_branch": "银行分行",
         "banking_details": "银行详情",
         "basic_details": "基本详情",
+        "beneficiaries": "受益人",
+        "beneficiary_details": "受益人详情",
+        "benefit_proportion": "收益比例",
         "branch": "分行",
         "branch_required": "分行是必填项",
+        "cancel" : "取消",
         "choose_file": "选择文件",
         "citizenship": "国籍",
+        "click_on_+_icon_to_add_record": "点击 + 图标添加记录",
         "client": "客户",
         "coinsurance": "共保",
         "coinsurer_share": "共保人份额",
         "completed": "已完成",
+        "contact": "联系",
         "contact_details": "联系详情",
         "continue": "继续",
         "country": "国家",
         "county": "县/区",
         "cover_types": "保险类型",
         "currency": "货币",
+        "date_of_birth_age": "出生日期（年龄）",
+        "delete": "删除",
+        "dependent": "受抚养人",
+        "dependents_details": "受抚养人详情",
         "distribution_channel": "分销渠道",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "您希望享有递增选项的好处吗",
         "dob": "出生日期",
@@ -1388,6 +1399,7 @@
         "documents_uploaded": "文件已上传",
         "documents_upload": "上传文件",
         "economic_sector": "经济部门",
+        "edit": "编辑",
         "email_address": "电子邮箱地址",
         "escalation": "递增",
         "escalation_rate": "递增率",
@@ -1398,25 +1410,32 @@
         "first_name_required": "名字是必填项",
         "frequency_of_payment": "付款频率",
         "gender": "性别",
+        "guardian_details": "监护人详情",
         "iban": "国际银行账号",
         "incorrect_id_no_format": "身份证号码格式错误",
         "last_name": "姓氏",
         "last_name_required": "姓氏是必填项",
         "leader_share": "主保险人份额",
+        "loading": "加载中",
         "male": "男性",
         "marital_status": "婚姻状况",
         "mode_of_identity": "身份证明类型",
         "mode_of_identity_number": "身份证明号码",
         "mode_of_identity_required": "身份证明类型是必填项",
         "mpay_no": "移动支付号码",
+        "name_trustee": "姓名（受托人）",
         "nationality": "国籍",
         "nationality_required": "国籍是必填项",
         "new_client": "新客户",
+        "next": "下一步",
         "no": "否",
         "no_cover_type_available": "没有可用的保险类型",
         "no_file_upload_available": "无法上传文件",
+        "no_record_capture": "没有记录",
         "occupation": "职业",
         "option": "选项",
+        "other_name": "其他名字",
+        "percentage_benefit": "收益百分比",
         "phone_number": "电话号码",
         "physical_address": "实际地址",
         "pin_number": "密码",
@@ -1432,6 +1451,9 @@
         "proposal_date": "提案日期",
         "proposal_sign_date": "提案签署日期",
         "purpose_of_insurance": "保险目的",
+        "relationship": "关系",
+        "relationship_trustee": "关系（受托人）",
+        "save":"保存",
         "save_and_continue": "保存并继续",
         "select_bank": "选择银行",
         "select_bank_branch": "选择银行分行",
@@ -1466,6 +1488,7 @@
         "title": "称谓",
         "type_of_employment": "就业类型",
         "town": "城镇",
+        "type": "类型",
         "upload_later": "稍后上传",
         "wealth_aml_details": "财富反洗钱详情",
         "with_effect_from": "生效日期",
