--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1365,24 +1365,35 @@
         "account_number": "Kontonummer",
         "add_coinsurance_option": "Mitversicherung hinzufügen",
         "agent": "Agent",
+        "back": "Zurück",
         "bank": "Bank",
         "bank_branch": "Bankfiliale",
         "banking_details": "Bankdaten",
         "basic_details": "Grundlegende Angaben",
+        "beneficiaries": "Begünstigte",
+        "beneficiary_details": "Begünstigtendetails",
+        "benefit_proportion": "Vorteilsanteil",
         "branch": "Filiale",
         "branch_required": "Filiale ist erforderlich",
+        "cancel" : "Abbrechen",
         "choose_file": "Datei auswählen",
         "citizenship": "Staatsangehörigkeit",
+        "click_on_+_icon_to_add_record": "Klicken Sie auf das + Symbol, um einen Eintrag hinzuzufügen",
         "client": "Kunde",
         "coinsurance": "Mitversicherung",
         "coinsurer_share": "Anteil des Mitversicherers",
         "completed": "Abgeschlossen",
+        "contact": "Kontakt",
         "contact_details": "Kontaktdaten",
         "continue": "Weiter",
         "country": "Land",
         "county": "Bezirk",
         "cover_types": "Deckungsarten",
         "currency": "Währung",
+        "date_of_birth_age": "Geburtsdatum (Alter)",
+        "delete": "Löschen",
+        "dependent": "Abhängige",
+        "dependents_details": "Angaben zu den Abhängigen",
         "distribution_channel": "Vertriebskanal",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Möchten Sie von der Eskalationsoption profitieren",
         "dob": "Geburtsdatum",
@@ -1390,6 +1401,7 @@
         "documents_uploaded": "Dokumente hochgeladen",
         "documents_upload": "Dokumente hochladen",
         "economic_sector": "Wirtschaftssektor",
+        "edit": "Bearbeiten",
         "email_address": "E-Mail-Adresse",
         "escalation": "Eskalation",
         "escalation_rate": "Eskalationsrate",
@@ -1400,25 +1412,32 @@
         "first_name_required": "Vorname ist erforderlich",
         "frequency_of_payment": "Zahlungshäufigkeit",
         "gender": "Geschlecht",
+        "guardian_details": "Angaben zum Vormund",
         "iban": "IBAN",
         "incorrect_id_no_format": "Falsches Ausweisnummernformat",
         "last_name": "Nachname",
         "last_name_required": "Nachname ist erforderlich",
         "leader_share": "Anteil des Hauptversicherers",
+        "loading": "Wird geladen",
         "male": "Männlich",
         "marital_status": "Familienstand",
         "mode_of_identity": "Identitätsnachweis",
         "mode_of_identity_number": "Identitätsnachweis-Nummer",
         "mode_of_identity_required": "Identitätsnachweis ist erforderlich",
         "mpay_no": "MPay-Nummer",
+        "name_trustee": "Name (Treuhänder)",
         "nationality": "Nationalität",
         "nationality_required": "Nationalität ist erforderlich",
         "new_client": "Neuer Kunde",
+        "next": "Nächste",
         "no": "Nein",
         "no_cover_type_available": "Keine Deckungsart verfügbar",
         "no_file_upload_available": "Kein Datei-Upload verfügbar",
+        "no_record_capture": "Kein Eintrag erfasst",
         "occupation": "Beruf",
         "option": "Option",
+        "other_name": "Weiterer Name",
+        "percentage_benefit": "Prozentualer Nutzen",
         "phone_number": "Telefonnummer",
         "physical_address": "Physische Adresse",
         "pin_number": "PIN-Nummer",
@@ -1434,6 +1453,9 @@
         "proposal_date": "Antragsdatum",
         "proposal_sign_date": "Unterschriftsdatum des Antrags",
         "purpose_of_insurance": "Zweck der Versicherung",
+        "relationship": "Beziehung",
+        "relationship_trustee": "Beziehung (Treuhänder)",
+        "save":"Speichern",
         "save_and_continue": "Speichern und fortfahren",
         "select_bank": "Bank auswählen",
         "select_bank_branch": "Bankfiliale auswählen",
@@ -1468,6 +1490,7 @@
         "title": "Titel",
         "type_of_employment": "Beschäftigungsart",
         "town": "Stadt",
+        "type": "Typ",
         "upload_later": "Später hochladen",
         "wealth_aml_details": "Vermögens-AML-Details",
         "with_effect_from": "Gültig ab",
