--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1359,24 +1359,35 @@
         "account_number": "Número de cuenta",
         "add_coinsurance_option": "Agregar opción de coaseguro",
         "agent": "Agente",
+        "back": "Atrás",
         "bank": "Banco",
         "bank_branch": "Sucursal bancaria",
         "banking_details": "Detalles bancarios",
         "basic_details": "Detalles básicos",
+        "beneficiaries": "Beneficiarios",
+        "beneficiary_details": "Proporción del beneficio",
+        "benefit_proportion": "Benefit Proportion",
         "branch": "Sucursal",
         "branch_required": "La sucursal es obligatoria",
+        "cancel" : "Cancelar",
         "choose_file": "Elegir archivo",
         "citizenship": "Ciudadanía",
+        "click_on_+_icon_to_add_record": "haga clic en el icono + para agregar un registro",
         "client": "Cliente",
         "coinsurance": "Coaseguro",
         "coinsurer_share": "Participación del coasegurador",
         "completed": "Completado",
+        "contact": "Contacto",
         "contact_details": "Detalles de contacto",
         "continue": "Continuar",
         "country": "País",
         "county": "Condado",
         "cover_types": "Tipos de cobertura",
         "currency": "Moneda",
+        "date_of_birth_age": "Fecha de Nacimiento (Edad)",
+        "delete": "Eliminar",
+        "dependent": "Dependiente",
+        "dependents_details": "Detalles de los dependientes",
         "distribution_channel": "Canal de distribución",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "¿Desea tener el beneficio de la opción de escalación?",
         "dob": "Fecha de nacimiento",
@@ -1384,6 +1395,7 @@
         "documents_uploaded": "Documentos subidos",
         "documents_upload": "Subida de documentos",
         "economic_sector": "Sector económico",
+        "edit": "Editar",
         "email_address": "Dirección de correo electrónico",
         "escalation": "Escalación",
         "escalation_rate": "Tasa de escalación",
@@ -1394,25 +1406,32 @@
         "first_name_required": "El nombre es obligatorio",
         "frequency_of_payment": "Frecuencia de pago",
         "gender": "Género",
+        "guardian_details": "Detalles del tutor",
         "iban": "IBAN",
         "incorrect_id_no_format": "Formato incorrecto del número de identificación",
         "last_name": "Apellido",
         "last_name_required": "El apellido es obligatorio",
         "leader_share": "Participación del líder",
+        "loading": "Cargando",
         "male": "Masculino",
         "marital_status": "Estado civil",
         "mode_of_identity": "Tipo de identificación",
         "mode_of_identity_number": "Número de identificación",
         "mode_of_identity_required": "El tipo de identificación es obligatorio",
         "mpay_no": "Número MPay",
+        "name_trustee": "Nombre (Fideicomisario)",
         "nationality": "Nacionalidad",
         "nationality_required": "La nacionalidad es obligatoria",
         "new_client": "Nuevo cliente",
+        "next": "Siguiente",
         "no": "No",
         "no_cover_type_available": "No hay tipo de cobertura disponible",
         "no_file_upload_available": "No hay subida de archivos disponible",
+        "no_record_capture": "No hay registros capturados",
         "occupation": "Ocupación",
         "option": "Opción",
+        "other_name": "Otro Nombre",
+        "percentage_benefit": "Porcentaje de Beneficio",
         "phone_number": "Número de teléfono",
         "physical_address": "Dirección física",
         "pin_number": "Número PIN",
@@ -1428,6 +1447,9 @@
         "proposal_date": "Fecha de propuesta",
         "proposal_sign_date": "Fecha de firma de la propuesta",
         "purpose_of_insurance": "Propósito del seguro",
+        "relationship": "Relación",
+        "relationship_trustee": "Relación (Fideicomisario)",
+        "save":"Guardar",
         "save_and_continue": "Guardar y continuar",
         "select_bank": "Seleccionar banco",
         "select_bank_branch": "Seleccionar sucursal bancaria",
@@ -1460,6 +1482,7 @@
         "sum_assured": "Suma asegurada",
         "term": "Término",
         "title": "Título",
+        "type": "Tipo",
         "type_of_employment": "Tipo de empleo",
         "town": "Ciudad",
         "upload_later": "Subir más tarde",
