--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1363,18 +1363,25 @@
         "account_number": "Numéro de compte",
         "add_coinsurance_option": "Ajouter une option de coassurance",
         "agent": "Agent",
+        "back": "Retour",
         "bank": "Banque",
         "bank_branch": "Agence bancaire",
         "banking_details": "Détails bancaires",
         "basic_details": "Détails de base",
+        "beneficiaries": "Bénéficiaires",
+        "beneficiary_details": "Détails du bénéficiaire",
+        "benefit_proportion": "Proportion des bénéfices",
         "branch": "Agence",
         "branch_required": "L'agence est requise",
+        "cancel" : "Annuler",
         "choose_file": "Choisir un fichier",
         "citizenship": "Nationalité",
+        "click_on_+_icon_to_add_record": "cliquez sur l'icône + pour ajouter un enregistrement",
         "client": "Client",
         "coinsurance": "Coassurance",
         "coinsurer_share": "Part du coassureur",
         "completed": "Terminé",
+        "contact": "Contact",
         "contact_details": "Détails de contact",
         "continue": "Continuer",
         "country": "Pays",
@@ -1382,12 +1389,17 @@
         "cover_types": "Types de couverture",
         "currency": "Devise",
         "distribution_channel": "Canal de distribution",
+        "date_of_birth_age": "Date de naissance (Âge)",
+        "delete": "Supprimer",
+        "dependent": "Personne(s) à charge",
+        "dependents_details": "Détails des personnes à charge",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Souhaitez-vous bénéficier de l'option d'escalade",
         "dob": "Date de naissance",
         "dob_required": "La date de naissance est requise",
         "documents_uploaded": "Documents téléchargés",
         "documents_upload": "Téléchargement de documents",
         "economic_sector": "Secteur économique",
+        "edit": "Modifier",
         "email_address": "Adresse e-mail",
         "escalation": "Escalade",
         "escalation_rate": "Taux d'escalade",
@@ -1398,25 +1410,32 @@
         "first_name_required": "Le prénom est requis",
         "frequency_of_payment": "Fréquence de paiement",
         "gender": "Genre",
+        "guardian_details": "Détails du tuteur",
         "iban": "IBAN",
         "incorrect_id_no_format": "Format du numéro d'identification incorrect",
         "last_name": "Nom de famille",
         "last_name_required": "Le nom de famille est requis",
         "leader_share": "Part du leader",
+        "loading": "Chargement",
         "male": "Homme",
         "marital_status": "État civil",
         "mode_of_identity": "Type d'identité",
         "mode_of_identity_number": "Numéro d'identité",
         "mode_of_identity_required": "Le type d'identité est requis",
         "mpay_no": "Numéro MPay",
+        "name_trustee": "Nom (Fiduciaire)",
         "nationality": "Nationalité",
         "nationality_required": "La nationalité est requise",
         "new_client": "Nouveau client",
+        "next": "Suivant",
         "no": "Non",
         "no_cover_type_available": "Aucun type de couverture disponible",
         "no_file_upload_available": "Aucun téléchargement de fichier disponible",
+        "no_record_capture": "Aucun enregistrement capturé",
         "occupation": "Profession",
+        "other_name": "Autre Nom",
         "option": "Option",
+        "percentage_benefit": "Pourcentage de bénéfice",
         "phone_number": "Numéro de téléphone",
         "physical_address": "Adresse physique",
         "pin_number": "Numéro PIN",
@@ -1432,6 +1451,9 @@
         "proposal_date": "Date de la proposition",
         "proposal_sign_date": "Date de signature de la proposition",
         "purpose_of_insurance": "Objet de l'assurance",
+        "relationship": "Relation",
+        "relationship_trustee": "Relation (Fiduciaire)",
+        "save":"Enregistrer",
         "save_and_continue": "Enregistrer et continuer",
         "select_bank": "Sélectionner la banque",
         "select_bank_branch": "Sélectionner l'agence bancaire",
@@ -1464,6 +1486,7 @@
         "sum_assured": "Somme assurée",
         "term": "Durée",
         "title": "Titre",
+        "type": "Type",
         "type_of_employment": "Type d'emploi",
         "town": "Ville",
         "upload_later": "Télécharger plus tard",
