--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1365,24 +1365,35 @@
         "account_number": "Nambari ya Akaunti",
         "add_coinsurance_option": "Ongeza Chaguo la Bima ya Pamoja",
         "agent": "Wakala",
+        "back": "Rudi",
         "bank": "Benki",
         "bank_branch": "Tawi la Benki",
         "banking_details": "Maelezo ya Benki",
         "basic_details": "Maelezo ya Msingi",
+        "beneficiaries": "Wafaidika",
+        "beneficiary_details": "Maelezo ya Mfaidika",
+        "benefit_proportion": "Sehemu ya Manufaa",
         "branch": "Tawi",
         "branch_required": "Tawi linahitajika",
+        "cancel" : "Ghairi",
         "choose_file": "Chagua Faili",
         "citizenship": "Uraia",
+        "click_on_+_icon_to_add_record": "bonyeza ikoni ya + kuongeza rekodi",
         "client": "Mteja",
         "coinsurance": "Bima ya Pamoja",
         "coinsurer_share": "Sehemu ya Mshirika wa Bima",
         "completed": "Imekamilika",
+        "contact": "Mawasiliano",
         "contact_details": "Maelezo ya Mawasiliano",
         "continue": "Endelea",
         "country": "Nchi",
         "county": "Kaunti",
         "cover_types": "Aina za Bima",
         "currency": "Sarafu",
+        "date_of_birth_age": "Tarehe ya Kuzaliwa (Umri)",
+        "delete": "Futa",
+        "dependents_details": "Maelezo ya Wategemezi",
+        "dependent": "Wategemezi",
         "distribution_channel": "Njia ya Usambazaji",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Je, unataka kufaidika na chaguo la ongezeko?",
         "dob": "Tarehe ya Kuzaliwa",
@@ -1390,6 +1401,7 @@
         "documents_uploaded": "Hati zimepakiwa",
         "documents_upload": "Pakia Hati",
         "economic_sector": "Sekta ya Uchumi",
+        "edit": "Hariri",
         "email_address": "Barua Pepe",
         "escalation": "Ongezeko",
         "escalation_rate": "Kiwango cha Ongezeko",
@@ -1400,25 +1412,32 @@
         "first_name_required": "Jina la kwanza linahitajika",
         "frequency_of_payment": "Mara ya Malipo",
         "gender": "Jinsia",
+        "guardian_details": "Maelezo ya Mlezi",
         "iban": "IBAN",
         "incorrect_id_no_format": "Muundo wa Nambari ya Kitambulisho sio sahihi",
         "last_name": "Jina la Mwisho",
         "last_name_required": "Jina la mwisho linahitajika",
         "leader_share": "Sehemu ya Kiongozi",
+        "loading": "Inapakia",
         "male": "Mwanaume",
         "marital_status": "Hali ya Ndoa",
         "mode_of_identity": "Aina ya Kitambulisho",
         "mode_of_identity_number": "Nambari ya Kitambulisho",
         "mode_of_identity_required": "Aina ya kitambulisho inahitajika",
         "mpay_no": "Nambari ya MPay",
+        "name_trustee": "Jina (Mdhamini)",
         "nationality": "Utaifa",
         "nationality_required": "Utaifa unahitajika",
         "new_client": "Mteja Mpya",
+        "next": "Ifuatayo",
         "no": "Hapana",
         "no_cover_type_available": "Hakuna Aina ya Bima Inayopatikana",
         "no_file_upload_available": "Hakuna Upakiaji wa Faili Unapatikana",
+        "no_record_capture": "Hakuna Rekodi Iliyorekodiwa",
         "occupation": "Kazi",
         "option": "Chaguo",
+        "other_name": "Jina Lingine",
+        "percentage_benefit": "Asilimia ya Manufaa",
         "phone_number": "Nambari ya Simu",
         "physical_address": "Anuani ya Makazi",
         "pin_number": "Nambari ya PIN",
@@ -1434,6 +1453,9 @@
         "proposal_date": "Tarehe ya Pendekezo",
         "proposal_sign_date": "Tarehe ya Kusaini Pendekezo",
         "purpose_of_insurance": "Kusudi la Bima",
+        "relationship": "Uhusiano",
+        "relationship_trustee": "Uhusiano (Mdhamini)",
+        "save":"Hifadhi",
         "save_and_continue": "Hifadhi na Endelea",
         "select_bank": "Chagua Benki",
         "select_bank_branch": "Chagua Tawi la Benki",
@@ -1466,6 +1488,7 @@
         "sum_assured": "Jumla Iliyohakikishwa",
         "term": "Kipindi",
         "title": "Kichwa",
+        "type": "Aina",
         "type_of_employment": "Aina ya Ajira",
         "town": "Mji",
         "upload_later": "Pakia Baadaye",
