VQ-736: Insurance History Screen

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1363,6 +1363,7 @@
         "account_number": "账号",
         "add_coinsurance_option": "添加共保选项",
         "agent": "代理人",
+        "annual_premium": "年度保费",
         "back": "返回",
         "bank": "银行",
         "bank_branch": "银行分行",
@@ -1413,6 +1414,8 @@
         "guardian_details": "监护人详情",
         "iban": "国际银行账号",
         "incorrect_id_no_format": "身份证号码格式错误",
+        "insurance_company": "保险公司",
+        "insurance_history": "保险历史",
         "last_name": "姓氏",
         "last_name_required": "姓氏是必填项",
         "leader_share": "主保险人份额",
@@ -1440,6 +1443,8 @@
         "physical_address": "实际地址",
         "pin_number": "密码",
         "pin_number_required": "密码是必填项",
+        "policy_no": "保单号",
+        "policy_question": "您是否拥有任何来自寿险公司的有效、失效、付清或退保的寿险保单",
         "po_box_number": "邮政信箱号码",
         "postal_address_details": "邮寄地址详情",
         "preferred_channel": "首选渠道",
@@ -1449,6 +1454,7 @@
         "product_details": "产品详情",
         "product_selection": "产品选择",
         "proposal_date": "提案日期",
+        "proposal_question": "您的寿险提案是否曾被拒绝、延期、撤回或以特殊条款接受",
         "proposal_sign_date": "提案签署日期",
         "purpose_of_insurance": "保险目的",
         "relationship": "关系",
@@ -1483,6 +1489,7 @@
         "select_town": "选择城镇",
         "sms_number": "短信号码",
         "source_of_funds": "资金来源",
+        "status": "状态",
         "sum_assured": "保额",
         "term": "期限",
         "title": "称谓",
