--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1364,6 +1364,7 @@
         "account_number": "Kontonummer",
         "add_coinsurance_option": "Mitversicherung hinzufügen",
         "agent": "Agent",
+        "annual_premium": "Jahresprämie",
         "back": "Zurück",
         "bank": "Bank",
         "bank_branch": "Bankfiliale",
@@ -1414,6 +1415,8 @@
         "guardian_details": "Angaben zum Vormund",
         "iban": "IBAN",
         "incorrect_id_no_format": "Falsches Ausweisnummernformat",
+        "insurance_company": "Versicherungsgesellschaft",
+        "insurance_history": "Versicherungshistorie",
         "last_name": "Nachname",
         "last_name_required": "Nachname ist erforderlich",
         "leader_share": "Anteil des Hauptversicherers",
@@ -1442,6 +1445,8 @@
         "pin_number": "PIN-Nummer",
         "pin_number_required": "PIN-Nummer ist erforderlich",
         "po_box_number": "Postfachnummer",
+        "policy_no": "Policenummer",
+        "policy_question": "Haben Sie eine aktive, abgelaufene, bezahlte oder gekündigte Lebensversicherungspolice von einer Lebensversicherungsgesellschaft",
         "postal_address_details": "Postanschrift Details",
         "preferred_channel": "Bevorzugter Kanal",
         "premium": "Prämie",
@@ -1450,6 +1455,7 @@
         "product_details": "Produktdetails",
         "product_selection": "Produktauswahl",
         "proposal_date": "Antragsdatum",
+        "proposal_question": "Wurde jemals ein Vorschlag für Ihre Lebensversicherung abgelehnt, verschoben, zurückgezogen oder zu besonderen Bedingungen akzeptiert",
         "proposal_sign_date": "Unterschriftsdatum des Antrags",
         "purpose_of_insurance": "Zweck der Versicherung",
         "relationship": "Beziehung",
@@ -1483,6 +1489,7 @@
         "select_title": "Titel auswählen",
         "select_town": "Stadt auswählen",
         "sms_number": "SMS-Nummer",
+        "status": "Status",
         "source_of_funds": "Mittelherkunft",
         "sum_assured": "Versicherungssumme",
         "term": "Laufzeit",
