--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1360,6 +1360,7 @@
         "account_number": "Número de cuenta",
         "add_coinsurance_option": "Agregar opción de coaseguro",
         "agent": "Agente",
+        "annual_premium": "Prima anual",
         "back": "Atrás",
         "bank": "Banco",
         "bank_branch": "Sucursal bancaria",
@@ -1410,6 +1411,8 @@
         "guardian_details": "Detalles del tutor",
         "iban": "IBAN",
         "incorrect_id_no_format": "Formato incorrecto del número de identificación",
+        "insurance_company": "Compañía de seguros",
+        "insurance_history": "Historial de seguros",
         "last_name": "Apellido",
         "last_name_required": "El apellido es obligatorio",
         "leader_share": "Participación del líder",
@@ -1438,6 +1441,8 @@
         "pin_number": "Número PIN",
         "pin_number_required": "El número PIN es obligatorio",
         "po_box_number": "Número de apartado postal",
+        "policy_no": "Número de póliza",
+        "policy_question": "¿Tiene alguna póliza de seguro de vida activa, vencida, pagada o rescatada de alguna compañía de seguros de vida",
         "postal_address_details": "Detalles de la dirección postal",
         "preferred_channel": "Canal preferido",
         "premium": "Prima",
@@ -1446,6 +1451,7 @@
         "product_details": "Detalles del producto",
         "product_selection": "Selección de producto",
         "proposal_date": "Fecha de propuesta",
+        "proposal_question": "¿Alguna vez se ha rechazado, aplazado, retirado o aceptado bajo condiciones especiales alguna propuesta de seguro sobre su vida",
         "proposal_sign_date": "Fecha de firma de la propuesta",
         "purpose_of_insurance": "Propósito del seguro",
         "relationship": "Relación",
@@ -1480,6 +1486,7 @@
         "select_town": "Seleccionar ciudad",
         "sms_number": "Número SMS",
         "source_of_funds": "Fuente de fondos",
+        "status": "Estado",
         "sum_assured": "Suma asegurada",
         "term": "Término",
         "title": "Título",
