--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1364,6 +1364,7 @@
         "account_number": "Numéro de compte",
         "add_coinsurance_option": "Ajouter une option de coassurance",
         "agent": "Agent",
+        "annual_premium": "Prime annuelle",
         "back": "Retour",
         "bank": "Banque",
         "bank_branch": "Agence bancaire",
@@ -1414,6 +1415,8 @@
         "guardian_details": "Détails du tuteur",
         "iban": "IBAN",
         "incorrect_id_no_format": "Format du numéro d'identification incorrect",
+        "insurance_company": "Compagnie d'assurance",
+        "insurance_history": "Historique d'assurance",
         "last_name": "Nom de famille",
         "last_name_required": "Le nom de famille est requis",
         "leader_share": "Part du leader",
@@ -1442,6 +1445,8 @@
         "pin_number": "Numéro PIN",
         "pin_number_required": "Le numéro PIN est requis",
         "po_box_number": "Numéro de boîte postale",
+        "policy_no": "Numéro de police",
+        "policy_question": "Avez-vous une police d'assurance vie active, expirée, payée ou rachetée auprès de toute compagnie d'assurance vie",
         "postal_address_details": "Détails de l'adresse postale",
         "preferred_channel": "Canal préféré",
         "premium": "Prime",
@@ -1450,6 +1455,7 @@
         "product_details": "Détails du produit",
         "product_selection": "Sélection de produit",
         "proposal_date": "Date de la proposition",
+        "proposal_question": "Une proposition d'assurance sur votre vie a-t-elle déjà été refusée, différée, retirée ou acceptée à des conditions spéciales",
         "proposal_sign_date": "Date de signature de la proposition",
         "purpose_of_insurance": "Objet de l'assurance",
         "relationship": "Relation",
@@ -1484,6 +1490,7 @@
         "select_town": "Sélectionner la ville",
         "sms_number": "Numéro SMS",
         "source_of_funds": "Source des fonds",
+        "status": "Statut",
         "sum_assured": "Somme assurée",
         "term": "Durée",
         "title": "Titre",
