--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1365,6 +1365,7 @@
         "account_number": "Nambari ya Akaunti",
         "add_coinsurance_option": "Ongeza Chaguo la Bima ya Pamoja",
         "agent": "Wakala",
+        "annual_premium": "Ada ya Bima ya Mwaka",
         "back": "Rudi",
         "bank": "Benki",
         "bank_branch": "Tawi la Benki",
@@ -1415,6 +1416,8 @@
         "guardian_details": "Maelezo ya Mlezi",
         "iban": "IBAN",
         "incorrect_id_no_format": "Muundo wa Nambari ya Kitambulisho sio sahihi",
+        "insurance_company": "Kampuni ya Bima",
+        "insurance_history": "Historia ya Bima",
         "last_name": "Jina la Mwisho",
         "last_name_required": "Jina la mwisho linahitajika",
         "leader_share": "Sehemu ya Kiongozi",
@@ -1443,6 +1446,8 @@
         "pin_number": "Nambari ya PIN",
         "pin_number_required": "Nambari ya PIN inahitajika",
         "po_box_number": "Sanduku la Posta",
+        "policy_no": "Nambari ya Sera",
+        "policy_question": "Je, una sera yoyote ya bima ya maisha ambayo ni hai, iliyomalizika muda, iliyolipwa au iliyositishwa kutoka kwa kampuni yoyote ya bima ya maisha",
         "postal_address_details": "Maelezo ya Anuani ya Posta",
         "preferred_channel": "Njia Inayopendelewa",
         "premium": "Malipo ya Bima",
@@ -1451,6 +1456,7 @@
         "product_details": "Maelezo ya Bidhaa",
         "product_selection": "Uteuzi wa Bidhaa",
         "proposal_date": "Tarehe ya Pendekezo",
+        "proposal_question": "Je, pendekezo lolote juu ya maisha yako limewahi kukataliwa, kucheleweshwa, kuondolewa au kukubaliwa kwa masharti maalum",
         "proposal_sign_date": "Tarehe ya Kusaini Pendekezo",
         "purpose_of_insurance": "Kusudi la Bima",
         "relationship": "Uhusiano",
@@ -1485,6 +1491,7 @@
         "select_town": "Chagua Mji",
         "sms_number": "Nambari ya SMS",
         "source_of_funds": "Chanzo cha Fedha",
+        "status": "Hali",
         "sum_assured": "Jumla Iliyohakikishwa",
         "term": "Kipindi",
         "title": "Kichwa",
